CheckIn: Fix bugs in the project detected by FindBugs.